WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70311
[EFL][WK2] Added missing dummy interpretKeyEvent function
https://bugs.webkit.org/show_bug.cgi?id=70311
Summary
[EFL][WK2] Added missing dummy interpretKeyEvent function
Tomasz Morawski
Reported
2011-10-18 00:00:00 PDT
Added missing dummy interpretKeyEvent function needed to compile WK2.
Attachments
Patch
(1.20 KB, patch)
2011-10-18 00:01 PDT
,
Tomasz Morawski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomasz Morawski
Comment 1
2011-10-18 00:01:24 PDT
Created
attachment 111396
[details]
Patch
Gyuyoung Kim
Comment 2
2011-10-18 00:21:09 PDT
Comment on
attachment 111396
[details]
Patch LGTM.
Leandro Pereira
Comment 3
2011-10-18 06:26:53 PDT
Comment on
attachment 111396
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2011-10-19 00:52:09 PDT
Comment on
attachment 111396
[details]
Patch Clearing flags on attachment: 111396 Committed
r97840
: <
http://trac.webkit.org/changeset/97840
>
WebKit Review Bot
Comment 5
2011-10-19 00:52:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug