[EFL][WK2] Added missing dummy interpretKeyEvent function https://bugs.webkit.org/show_bug.cgi?id=70311

Patch by Tomasz Morawski <t.morawski@samsung.com> on 2011-10-19
Reviewed by Ryosuke Niwa.

Added missing dummy interpretKeyEvent function needed to compile WK2.

* WebProcess/WebPage/efl/WebPageEfl.cpp:
(WebKit::WebPage::interpretKeyEvent):

Canonical link: https://commits.webkit.org/86555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97840 268f45cc-cd09-0410-ab3c-d52691b4dbfc